--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An API for reviews of guests",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "node ./node_modules/.bin/mocha tests/*.js"
   },
   "repository": {
